--- a/public/src/Component/App/reset.scss
+++ b/public/src/Component/App/reset.scss
@@ -139,7 +139,7 @@ table {
 
 * {
   -webkit-overflow-scrolling: touch;
-  outline: 1px solid red;
+  // outline: 1px solid red;
 }
 // * {
 // 	outline: 1px solid red;
