--- a/public/src/Component/Home/Home.scss
+++ b/public/src/Component/Home/Home.scss
@@ -1,7 +1,7 @@
 #home {
   width: 100%;
-  height: 50vh;
-  background: #ededed;
+  height: 100vh;
+  background: black;
   color: red;
   display: flex;
   flex-direction: column;
