--- a/public/src/Component/Navbar/Navbar.scss
+++ b/public/src/Component/Navbar/Navbar.scss
@@ -1,7 +1,7 @@
 #navbar {
   position: fixed;
   text-transform: uppercase;
-  background-color: black;
+  background-color: #f2f2f2;
   width: 100%;
 
   div {
@@ -13,10 +13,15 @@
 }
 
 .menu-logo {
-  color: white;
+  color: #f2f2f2;
   vertical-align: middle;
 }
 
+.menu-logo-img {
+  width: 80px;
+  height: auto;
+  object-fit: contain;
+}
 .main-menu {
   display: flex;
   padding: 20px;
@@ -31,11 +36,13 @@
   padding-left: 40px;
   padding-right: 40px;
   font-size: 12px;
-  color: white;
   letter-spacing: 1px;
+  * {
+    text-decoration: none;
+    color: Black;
+  }
 }
 
-.menu-item:hover {
-  background-color: white;
-  color: black;
+.menu-item *:hover {
+  color: #ca3b4f;
 }
