--- a/public/src/Component/Home/Home.scss
+++ b/public/src/Component/Home/Home.scss
@@ -1,14 +1,61 @@
-#home {
-  width: 100%;
-  height: 100vh;
-  background: black;
-  color: red;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+@import url("https://fonts.googleapis.com/css?family=Ubuntu");
 
-  .hello {
-    color: blue;
+#home {
+  height: 100%;
+  background: url(https://images.unsplash.com/photo-1540852360777-5f6fa7752aeb?ixlib=rb-1.2.1&auto=format&fit=crop&w=2292&q=80)
+    no-repeat center center;
+  background-size: cover;
+  // overflow: hidden;
+  // background-attachment: fixed;
+
+  .home-container {
+    width: 100%;
+    height: 100vh;
+    background-color: RGBA(0, 0, 0, 0.5);
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
+    display: block;
   }
+}
+
+.home-logo {
+  position: absolute;
+  top: 24%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 175 px;
+  height: 175px;
+  display: block;
+}
+
+.text-box {
+  position: absolute;
+  top: 42%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 75%;
+  text-align: center;
+}
+.heading-primary {
+  color: #f2f2f2;
+  text-transform: uppercase;
+}
+
+.heading-primary-main {
+  display: block;
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 12px;
+  font-family: "Ubuntu", Bold;
+}
+
+.heading-primary-sub {
+  display: block;
+  font-size: 25px;
+  font-weight: 700;
+  letter-spacing: 17.4px;
+  font-family: "Ubuntu", Medium;
+  color: #ca3b4f;
 }
