--- a/public/src/Component/Navbar/Navbar.scss
+++ b/public/src/Component/Navbar/Navbar.scss
@@ -1,8 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Ubuntu");
+
 #navbar {
   position: fixed;
   text-transform: uppercase;
   background-color: #f2f2f2;
   width: 100%;
+  z-index: 1;
+  background-color: transparent;
 
   div {
     width: 80%;
@@ -27,6 +31,7 @@
   padding: 20px;
   width: 100%;
   justify-content: flex-end;
+  opacity: 1;
 }
 
 .menu-item {
@@ -37,9 +42,11 @@
   padding-right: 40px;
   font-size: 12px;
   letter-spacing: 1px;
+  font-family: "Ubuntu", Medium;
   * {
     text-decoration: none;
-    color: Black;
+    color: #f2f2f2;
+    opacity: 1;
   }
 }
 
